fix spacing on login page

--- a/client/less/custom.less
+++ b/client/less/custom.less
@@ -46,6 +46,7 @@ label {
 		&.gr {
 			width: 50%;
 			@media (max-width: 700px) {
+				display: none;
 				width: 0%;
 			}
 		}
